Replace new Double with Double.valueOf
A recommendation from the IDE ¯\_(ツ)_/¯